# asgi-http-compression

./: DESIGN_BROTLI.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/asgi_http_compression/: __init__.py  compressor.py  compressors.py  middleware.py  responder.py  types.py
tests/: conftest.py  test_brotli.py  test_compressors.py  test_middleware.py  test_middleware_brotli.py  test_negotiation.py  test_responder.py
