[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asgi-http-compression"
version = "0.2.0"
description = "ASGI middleware for http response compression"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "timothy jeong", email = "k.jts8257@gmail.com" },
    { name = "minwoo kim", email = "ui9621@naver.com" },
]
requires-python = ">=3.10"

classifiers = [
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["asgi", "middleware", "compression", "gzip", "brotli", "zstd", "zstandard", "fastapi", "starlette"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/timothy-jeong/asgi-http-compression"
Repository = "https://github.com/timothy-jeong/asgi-http-compression"

[project.optional-dependencies]
brotli = ["brotli>=1.2.0"]
zstd = ["zstandard"]

test = [
    "anyio>=4.11.0",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "starlette>=0.50.0",
]
lint = [
    "ruff>=0.14.6",
]

dev = [
    "asgi-http-compression[brotli]",
    "asgi-http-compression[zstd]",
    "asgi-http-compression[test]",
    "asgi-http-compression[lint]",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["asgi_http_compression"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --cov=asgi_http_compression --cov-report=term-missing"
asyncio_mode = "auto"
pythonpath = ["src"] 

[tool.hatch.build.targets.wheel]
packages = ["src/asgi_http_compression"]

